# blog

./: .gitignore  .grype.yaml  .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  SECURITY.md  alembic.ini  disco.json  entrypoint.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  copilot-instructions.md  dependabot.yml  file_and_dir_filters.yml
.github/codeql/: actions-config.yml  javascript-typescript-config.yml  python-config.yml
.github/workflows/: codeql.yml  deploy.yml  gcp_auth.yml  pr.yml  pr_back.yml  pr_dockerfile.yml  pr_front.yml  pr_iac.yml  pr_secrets.yml  security-scan.yml  sync.yml
alembic/: env.py
back/: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  app.yaml  entities.py  index.yaml  prepare.sh  pyproject.toml  requirements.txt
back/helpers/: entities.py
back/src/: main.py  settings.py
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 1ba95a45cc2f_add_index.py  2819217ecfb7_init_comments_table.py
front/: Dockerfile  nginx.conf
front/content/: about.md
front/content/posts/: dhaulagiri-2019-01.md  dhaulagiri-2019-02.md  dhaulagiri-2019-03.md  echappee-belle-2020-01.md  rollwaling-2019-01.md
front/layouts/_default/: single.html  terms.html
front/layouts/_default/_markup/: render-image.html
front/src/: config.yml  package.json  tailwind.config.js
front/src/assets/: app.css  custom.css  main.css
front/src/content/: about.md
front/src/content/posts/: _index.md  dhaulagiri-2019-01.md  dhaulagiri-2019-02.md  dhaulagiri-2019-03.md  dhaulagiri-2019-04.md  dhaulagiri-2019-05.md  echappee-belle-2020-01.md  pokhara-2020-01.md  rollwaling-2019-01.md  rollwaling-2019-02.md  rollwaling-2023-01.md  tech-blog-01.md
front/src/layouts/_default/: baseof.html  list.html  single.html  terms.html
front/src/layouts/partials/: comments.html  footer.html  head.html  header.html
front/src/layouts/shortcodes/: collapse.html
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf
frontend/src/: .prettierignore  package.json  postcss.config.mjs  tailwind.config.js
frontend/src/assets/: app.css  custom.css  main.css
frontend/src/content/: about.md
frontend/src/content/posts/: dhaulagiri-2019-01.md  dhaulagiri-2019-03.md  dhaulagiri-2019-04.md  dhaulagiri-2019-05.md  echappee-belle-2020-01.md  lethe.md  tech-blog-01.md
frontend/src/layouts/: 404.html
frontend/src/layouts/_default/: baseof.html  list.html  single.html  terms.html
frontend/src/layouts/_default/_markup/: render-image.html
frontend/src/layouts/partials/: comments.html  footer.html  head.html  header.html
frontend/src/layouts/shortcodes/: collapse.html
iac/: Pulumi.yaml  __main__.py  back.tf  ci_cd_sa.tf  data.tf  datastore.tf  docker.tf  front.tf  main.tf  main_sa.tf  net.tf  oidc.tf  provider.tf  run.tf  sa.tf  umami.tf  variables.tf
iac/modules/back/: outputs.tf  run.tf  variables.tf
iac/modules/cloud-run/: iam.tf  outputs.tf  service.tf  variables.tf
iac/modules/data/: docker.tf  outputs.tf  sa.tf  secret.tf  variables.tf
iac/modules/front/: outputs.tf  run.tf  variables.tf
iac/modules/iam/: main_sa.tf  oidc.tf  variables.tf
iac/modules/mappings/: back.tf  dns.tf  front.tf  mappings.tf  outputs.tf  provider.tf  tls.tf  umami.tf  variables.tf
iac/modules/net/: dns.tf  outputs.tf  variables.tf
iac/modules/records/: dns.tf  variables.tf
iac/modules/secret/: secret.tf  variables.tf
iac/modules/umami/: outputs.tf  run.tf  secret.tf
src/: config.yml  main.py  models.py  package.json  settings.py
src/assets/: main.css
src/assets/js/: comments.js
src/content/posts/: dhaulagiri-2019-02.md  dhaulagiri-2019-05.md  pokhara-2020-01.md  rollwaling-2019-01.md  rollwaling-2019-02.md  tech-blog-01.md
src/layouts/_default/: list.html
src/layouts/partials/: comments.html  footer.html
