[project]
name = "blog-backend"
version = "0.1.0"
package-mode = false 
description = ""
authors = [
  {name = "Elmouatassim",email = "elmouatassim.louhaidia@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "fastapi (>=0.120.0,<0.121.0)",
  "email-validator (>=2.3.0,<3.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "pydantic-settings (>=2.11.0,<3.0.0)",
  "uvicorn[standard] (>=0.38.0,<0.39.0)",
  "supabase (>=2.22.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
