[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Elmouatassim Louhaidia <elmouatassim.louhaidia@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0"
google-cloud-datastore = "^2"
requests = "^2"
uvicorn = "^0"
pydantic = {extras = ["email"], version = "^1"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
